5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1637_1055.log
== SUBMITION (2019-04-09 11:42:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade: "))
a = radians(float(input("angulo: ")))
d = abs(float(input("distancia: ")))
g = 9.8
r = ((r >= d - 0.1)):
	mensagem = "sim"
	
else:
	mesnsagem = "nao"
	
print(mensagem)
-- EXECUTION TIME:
0.141134
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 9
    r = ((r >= d - 0.1)):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:44:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade: "))
a = radians(float(input("angulo: ")))
d = abs(float(input("distancia: ")))
g = 9.8
r = ((vo)**2 * sin(2 * a))/g
if(r >= d - 0.1)
	mensagem = "sim"
	
else:
	mesnsagem = "nao"
	
print(mensagem)
-- EXECUTION TIME:
0.209274
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 10
    if(r >= d - 0.1)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:44:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade: "))
a = radians(float(input("angulo: ")))
d = abs(float(input("distancia: ")))
g = 9.8
r = ((vo)**2 * sin(2 * a))/g
if(r >= d - 0.1):
	mensagem = "sim"
	
else:
	mesnsagem = "nao"
	
print(mensagem)
-- EXECUTION TIME:
0.152534
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade: "))
a = radians(float(input("angulo: ")))
d = abs(float(input("distancia: ")))
g = 9.8
r = ((vo)**2 * sin(2 * a))/g
if(r >= d - 0.1):
	mensagem = "sim"
	
else:
	mesnsagem = "nao"
	
print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:45:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vo = float(input("velocidade: "))
a = radians(float(input("angulo: ")))
d = abs(float(input("distancia: ")))
g = 9.8
r = ((vo)**2 * sin(2 * a))/g
if(r >= d - 0.1):
	mensagem = "sim"
	
else:
	mensagem = "nao"
	
print(mensagem)
-- EXECUTION TIME:
0.173521
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
